BMSModel : add Mode:enum and remove usekeys:int, modify all class affected by this change